=== Setup release 1.0 (Windows) ===
git-svn-id: https://svn.viathinksoft.com/svn/checksum-tools/trunk@9 b4ddfd75-dbbf-4721-b1f5-0ed84741e47a

--- a/Windows/TODO.txt
+++ b/Windows/TODO.txt
@@ -1,8 +1,11 @@
 
-Button to select directory
+File icons: High resolution + add SFV/MD5 into the icon file
 
-Button to convert drive letter (X:\) into long file name UNC path (\\?\)
+Program icons !!!
 
-Pause/Cancel button
+Directory checker:
+- Button to select directory
+- Button to convert drive letter (X:\) into long file name UNC path (\\?\)
+- Pause/Cancel button
 
-*Maybe* in the future a SFV/MD5 generator. However, TotalCommander can do it too.
+Documentation
