git-svn-id: https://svn.viathinksoft.com/svn/checksum-tools/trunk@18 b4ddfd75-dbbf-4721-b1f5-0ed84741e47a

--- a/Windows/TODO.txt
+++ b/Windows/TODO.txt
@@ -6,6 +6,7 @@ Program icons !!!
 Directory checker:
 - Button to select directory
 - Button to convert drive letter (X:\) into long file name UNC path (\\?\)
+	==> Not required. It is done automatically internally.
 - Pause/Cancel button
 
 Documentation
